--- a/BUL_l_english.yml
+++ b/BUL_l_english.yml
@@ -26,25 +26,25 @@ BUL_supported_bosnia:0 "보스니아 지원 완료"
 BUL_GATHERING_STORM_DESC:0 "After Tsar Boris brought down Kimon Georgiev's military regime, Bulgaria found itself increasingly under absolutist authority, far from what its constitution adopted at independence guaranteed.Surrounded by former enemies and greatly reduced in size following successive defeats during the Second Balkan War and the Second World War, revanchist ideologies have continued to gain in popularity, and may well bring Bulgaria back on the road to war."
 
  #ideas
- BUL_fledgeling_military_industry:0 "Fledgeling Military Industry"
+ BUL_fledgeling_military_industry:0 "군수 산업을 육성하다"
  BUL_fledgeling_military_industry_desc:0 "We Need To Expand Our Military Production To Five Factories To Improve Our Military Production"
- BUL_developing_military_industry:0 "Developing Military Industry"
+ BUL_developing_military_industry:0 "발전하는 군수 산업"
  BUL_developing_military_industry_desc:0 "We Need To Expand Our Military Production To Nine Factories To Improve Our Military Production"
  BUL_kickstarted_military_industry:0 "Kickstarted Military Industry"
- BUL_efficient_military_industry:0 "Efficient Military Industry"
- BUL_thriving_military_industry:0 "Thriving Military Industry"
+ BUL_efficient_military_industry:0 "효과적인 군수 산업"
+ BUL_thriving_military_industry:0 "번영하는 군수 산업"
  BUL_shattered_military:0 "Shattered Military"
  BUL_reformed_military:0 "Reformed Military"
  BUL_rehabilitated_military:0 "Rehabilitated Military"
  BUL_renewed_military:0 "Renewed Military"
- BUL_tsar's_authority:0 "Tsar's Authority"
- idea_state_security_ministry:0 "State Security Ministry"
+ BUL_tsar's_authority:0 "차르의 권한"
+ idea_state_security_ministry:0 "국가보안부"
  idea_communist_central_management:0 "Economic Plannification Bureau"
- BUL_volunteers:0 "Bulgarian International Volunteer Forces"
+ BUL_volunteers:0 "불가리아인 국제 의용군"
  BUL_youth_league:0 "Communist Youth League"
  BUL_free_opposition:0 "Free Political Opposition"
  BUL_tax_reforms:0 "Reformed Taxation"
- BUL_peasant_welfare:0 "Peasant Welfare"
+ BUL_peasant_welfare:0 "소작농 복지"
  BUL_mechanized_agriculture:0 "Improved Farming"
  BUL_orthodox_support:0 "Orthodox Support"
  BUL_chelopech_gold:0 "Chelopech Gold"
@@ -70,10 +70,10 @@ BUL_GATHERING_STORM_DESC:0 "After Tsar Boris brought down Kimon Georgiev's milit
  BUL_brannik:0 "Brannik Fascist Youth Organization"
  BUL_stable_grip:0 "Strengthened Grip"
  BUL_fascist_volunteers:0 "Expeditional Legionnaires"
- BUL_fascist_militarism:0 "Fascist Militarism"
- BUL_trade_agreement:0 "Trade Agreement"
+ BUL_fascist_militarism:0 "파시스트 민병대주의"
+ BUL_trade_agreement:0 "무역 협정"
  BUL_politicized_trade_union:0 "Politicized Trade Unions"
- BUL_organized_womens_organizations:0 "Organized Women's Organizations"
+ BUL_organized_womens_organizations:0 "조직화된 여성 조직"
 
  #tooltips
  vladimir_zaimov_killed:0 "Vladimir Zaimov Executed"
