--- a/BUL_l_english.yml
+++ b/BUL_l_english.yml
@@ -26,7 +26,7 @@ BUL_supported_bosnia:0 "보스니아 지원 완료"
 BUL_GATHERING_STORM_DESC:0 "After Tsar Boris brought down Kimon Georgiev's military regime, Bulgaria found itself increasingly under absolutist authority, far from what its constitution adopted at independence guaranteed.Surrounded by former enemies and greatly reduced in size following successive defeats during the Second Balkan War and the Second World War, revanchist ideologies have continued to gain in popularity, and may well bring Bulgaria back on the road to war."
 
  #ideas
- BUL_fledgeling_military_industry:0 "군수 산업을 육성하다"
+ BUL_fledgeling_military_industry:0 "군수 산업육성"
  BUL_fledgeling_military_industry_desc:0 "We Need To Expand Our Military Production To Five Factories To Improve Our Military Production"
  BUL_developing_military_industry:0 "발전하는 군수 산업"
  BUL_developing_military_industry_desc:0 "We Need To Expand Our Military Production To Nine Factories To Improve Our Military Production"
@@ -70,7 +70,7 @@ BUL_GATHERING_STORM_DESC:0 "After Tsar Boris brought down Kimon Georgiev's milit
  BUL_brannik:0 "Brannik Fascist Youth Organization"
  BUL_stable_grip:0 "Strengthened Grip"
  BUL_fascist_volunteers:0 "Expeditional Legionnaires"
- BUL_fascist_militarism:0 "파시스트 민병대주의"
+ BUL_fascist_militarism:0 "파시스트 군국주의"
  BUL_trade_agreement:0 "무역 협정"
  BUL_politicized_trade_union:0 "Politicized Trade Unions"
  BUL_organized_womens_organizations:0 "조직화된 여성 조직"
