--- a/replace/r56_startup_l_english.yml
+++ b/replace/r56_startup_l_english.yml
@@ -5,10 +5,10 @@ l_english:
 ###------> Startup Events <><> <><> <><> <><> <><>
 
 #Greetings and MP Event
-r56.startup.event.01.title:0 "Welcome to the Road!"
-    r56.startup.event.01.description:0 "56 팀에서 인사드립니다!\n\n게임을 최대한 최적화시켜드리기 위해 지금 싱글플레이인지 멀티플레이인지 알려주세요. 균형 조절 및 곶통 감소에 큰 도움이 됩니다.\n\n저희 모드를 플레이해주셔서 감사드리고, 좋은 하루 되세요!"
-    r56.startup.event.option_yes:0 "멀티플레이"
-    r56.startup.event.option_no:0 "싱글플레이"
+r56.startup.event.01.title:0 "56년으로 가는 길에 오신 것을 환영합니다!"
+    r56.startup.event.01.description:0 "56팀에서 인사드립니다!\n\n이 세션이 멀티플레이 게임용인지 아닌지를 설정하여 게임 플레이 환경을 최대한 최적화 할수 있도록 도와주시기 바랍니다.\n\n저희의 모드를 플레이 해주셔서 고맙고, 즐거운 하루 되세요!\n\n다음 분들께는 특별한 감사를 드립니다 : PENGTORY, Flanker, Aspere, dhyouk11, ssdd_9. 원래 56년으로 가는 길을 번역해 주신 분들입니다. 이분들을 위해 박수를 쳐주시기 바랍니다 - 유로파 유니버셜리스 번역팀 - 하인리히 뵐 기념사업회"
+    r56.startup.event.option_yes:0 "멀티 플레이"
+    r56.startup.event.option_no:0 "싱글 플레이"
 
  
 #####---------------------------------------------------------------------> End
