--- a/replace/victory_points_l_english.yml
+++ b/replace/victory_points_l_english.yml
@@ -105,72 +105,72 @@
  VICTORY_POINTS_4109:0 "아테네"
  VICTORY_POINTS_9940:0 "헤라클리온"
  VICTORY_POINTS_11818:0 "테살로니키"
- VICTORY_POINTS_11747:0 "Ankara"
- VICTORY_POINTS_9833:0 "Istanbul"
- VICTORY_POINTS_940:0 "Konya"
- VICTORY_POINTS_947:0 "Bursa"
- VICTORY_POINTS_4112:0 "Izmir"
- VICTORY_POINTS_9893:0 "Gaziantep"
- VICTORY_POINTS_9932:0 "Trabzon"
- VICTORY_POINTS_3938:0 "Madrid"
- VICTORY_POINTS_9764:0 "Barcelona"
- VICTORY_POINTS_740:0 "Bilbao"
- VICTORY_POINTS_758:1 "La Coruña"
- VICTORY_POINTS_875:0 "Cordoba"
- VICTORY_POINTS_885:0 "Burgos"
- VICTORY_POINTS_3816:0 "Zaragoza"
- VICTORY_POINTS_6906:0 "Valencia"
- VICTORY_POINTS_7183:0 "Sevilla"
- VICTORY_POINTS_9979:0 "Malaga"
- VICTORY_POINTS_10024:0 "Murcia"
- VICTORY_POINTS_11707:0 "Oviedo"
- VICTORY_POINTS_11825:0 "Valladolid"
- VICTORY_POINTS_4135:0 "Gibraltar"
- VICTORY_POINTS_11805:0 "Lisbon"
- VICTORY_POINTS_9817:0 "Porto"
- VICTORY_POINTS_9904:0 "Rome"
- VICTORY_POINTS_3780:0 "Milan"
- VICTORY_POINTS_819:0 "Naples"
- VICTORY_POINTS_6626:0 "Trieste"
- VICTORY_POINTS_6780:0 "Turin"
- VICTORY_POINTS_6788:0 "Genoa"
- VICTORY_POINTS_6606:0 "Bologna"
- VICTORY_POINTS_10074:0 "Palermo"
- VICTORY_POINTS_11584:0 "Venice"
- VICTORY_POINTS_11837:0 "Taranto"
- VICTORY_POINTS_6050:0 "Stockholm"
- VICTORY_POINTS_156:0 "Falun"
- VICTORY_POINTS_383:0 "Göteborg"
- VICTORY_POINTS_9279:0 "Malmö"
- VICTORY_POINTS_11114:0 "Karlstad"
- VICTORY_POINTS_11380:0 "Norrköping"
- VICTORY_POINTS_11215:0 "Karlskrona"
- VICTORY_POINTS_6115:0 "Oslo"
- VICTORY_POINTS_192:0 "Narvik"
- VICTORY_POINTS_3022:0 "Trondheim"
- VICTORY_POINTS_122:0 "Bergen"
- VICTORY_POINTS_11105:0 "Helsinki"
- VICTORY_POINTS_3083:0 "Turku"
- VICTORY_POINTS_3122:0 "Vaasa"
- VICTORY_POINTS_3137:0 "Tampere"
- VICTORY_POINTS_9206:0 "Viipuri"
- VICTORY_POINTS_3152:0 "Tallinn"
- VICTORY_POINTS_9221:0 "Tartu"
- VICTORY_POINTS_9340:0 "Riga"
- VICTORY_POINTS_310:0 "Daugavpils"
- VICTORY_POINTS_6296:0 "Kaunas"
- VICTORY_POINTS_9483:1 "Siauliai"
- VICTORY_POINTS_6103:0 "London"
- VICTORY_POINTS_3273:0 "Glasgow"
- VICTORY_POINTS_9297:0 "Birmingham"
- VICTORY_POINTS_351:0 "Newcastle"
- VICTORY_POINTS_3369:0 "Bristol"
- VICTORY_POINTS_3379:0 "Belfast"
- VICTORY_POINTS_6384:0 "Liverpool"
- VICTORY_POINTS_9379:0 "Leeds"
- VICTORY_POINTS_9392:0 "Edinburgh"
- VICTORY_POINTS_11293:0 "Dublin"
- VICTORY_POINTS_7394:0 "Cork"
+ VICTORY_POINTS_11747:0 "앙카라"
+ VICTORY_POINTS_9833:0 "이스탄불"
+ VICTORY_POINTS_940:0 "코니아"
+ VICTORY_POINTS_947:0 "부르사"
+ VICTORY_POINTS_4112:0 "이즈미르"
+ VICTORY_POINTS_9893:0 "가지안테프"
+ VICTORY_POINTS_9932:0 "트라브존"
+ VICTORY_POINTS_3938:0 "마드리드"
+ VICTORY_POINTS_9764:0 "바르셀로나"
+ VICTORY_POINTS_740:0 "빌바오"
+ VICTORY_POINTS_758:1 "라코루냐"
+ VICTORY_POINTS_875:0 "코르도바"
+ VICTORY_POINTS_885:0 "부르고스"
+ VICTORY_POINTS_3816:0 "사라고사"
+ VICTORY_POINTS_6906:0 "발렌시아"
+ VICTORY_POINTS_7183:0 "세비야"
+ VICTORY_POINTS_9979:0 "말라가"
+ VICTORY_POINTS_10024:0 "무르시아"
+ VICTORY_POINTS_11707:0 "오비에도"
+ VICTORY_POINTS_11825:0 "바야돌리드"
+ VICTORY_POINTS_4135:0 "지브롤터"
+ VICTORY_POINTS_11805:0 "리스본"
+ VICTORY_POINTS_9817:0 "포르투"
+ VICTORY_POINTS_9904:0 "로마"
+ VICTORY_POINTS_3780:0 "밀라노"
+ VICTORY_POINTS_819:0 "나폴리"
+ VICTORY_POINTS_6626:0 "트리에스테"
+ VICTORY_POINTS_6780:0 "토리노"
+ VICTORY_POINTS_6788:0 "제노아"
+ VICTORY_POINTS_6606:0 "볼로냐"
+ VICTORY_POINTS_10074:0 "팔레르모"
+ VICTORY_POINTS_11584:0 "베네치아"
+ VICTORY_POINTS_11837:0 "타란토"
+ VICTORY_POINTS_6050:0 "스톡홀름"
+ VICTORY_POINTS_156:0 "팔룬"
+ VICTORY_POINTS_383:0 "예테보리"
+ VICTORY_POINTS_9279:0 "말뫼"
+ VICTORY_POINTS_11114:0 "칼스타드"
+ VICTORY_POINTS_11380:0 "노르셰핑"
+ VICTORY_POINTS_11215:0 "칼스크로나"
+ VICTORY_POINTS_6115:0 "오슬로"
+ VICTORY_POINTS_192:0 "나르비크"
+ VICTORY_POINTS_3022:0 "트론헤임"
+ VICTORY_POINTS_122:0 "베르겐"
+ VICTORY_POINTS_11105:0 "헬싱키"
+ VICTORY_POINTS_3083:0 "투르쿠"
+ VICTORY_POINTS_3122:0 "바사"
+ VICTORY_POINTS_3137:0 "탐페레"
+ VICTORY_POINTS_9206:0 "비푸리"
+ VICTORY_POINTS_3152:0 "탈린"
+ VICTORY_POINTS_9221:0 "타르투"
+ VICTORY_POINTS_9340:0 "리가"
+ VICTORY_POINTS_310:0 "다우가프필스"
+ VICTORY_POINTS_6296:0 "카우나스"
+ VICTORY_POINTS_9483:1 "샤울랴이"
+ VICTORY_POINTS_6103:0 "런던"
+ VICTORY_POINTS_3273:0 "글래스고"
+ VICTORY_POINTS_9297:0 "버밍엄"
+ VICTORY_POINTS_351:0 "뉴캐슬"
+ VICTORY_POINTS_3369:0 "브리스톨"
+ VICTORY_POINTS_3379:0 "벨파스트"
+ VICTORY_POINTS_6384:0 "리버풀"
+ VICTORY_POINTS_9379:0 "리즈"
+ VICTORY_POINTS_9392:0 "에든버러"
+ VICTORY_POINTS_11293:0 "더블린"
+ VICTORY_POINTS_7394:0 "코크"
  VICTORY_POINTS_6380:0 "Moscow"
  VICTORY_POINTS_525:0 "Kiev"
  VICTORY_POINTS_3529:0 "Stalingrad"
