--- a/r56_countries_l_english.yml
+++ b/r56_countries_l_english.yml
@@ -88,9 +88,9 @@ l_english:
  DEN_democratic_ADJ:0 "덴마크"
  DEN_neutrality_ADJ:0 "덴마크"
  DEN_communism_ADJ:0 "덴마크"
- BAV_communism:0 "바이에른"
- BAV_democratic:0 "바이에른"
  BAV_neutrality:0 "바이에른"
+ BAV_neutrality_DEF:0 "바이에른"
+ BAV_neutrality_ADJ:0 "바이에른"
  WUR_neutrality:0 "뷔르템베르크"
  WUR_neutrality_DEF:0 "뷔르템베르크"
  WUR_neutrality_ADJ:0 "뷔르템베르크"
