--- a/replace/victory_points_l_english.yml
+++ b/replace/victory_points_l_english.yml
@@ -171,69 +171,69 @@
  VICTORY_POINTS_9392:0 "에든버러"
  VICTORY_POINTS_11293:0 "더블린"
  VICTORY_POINTS_7394:0 "코크"
- VICTORY_POINTS_6380:0 "Moscow"
- VICTORY_POINTS_525:0 "Kiev"
- VICTORY_POINTS_3529:0 "Stalingrad"
- VICTORY_POINTS_3151:0 "Leningrad"
- VICTORY_POINTS_6474:0 "Stalino"
- VICTORY_POINTS_9417:0 "Rostov"
- VICTORY_POINTS_11375:0 "Gorki"
- VICTORY_POINTS_117:0 "Novgorod"
- VICTORY_POINTS_121:0 "Yaroslavl"
- VICTORY_POINTS_306:0 "Smolensk"
- VICTORY_POINTS_413:0 "Voronezh"
- VICTORY_POINTS_418:0 "Kharkov"
- VICTORY_POINTS_957:0 "Vladivostok"
- VICTORY_POINTS_1278:0 "Ufa"
- VICTORY_POINTS_1459:0 "Tashkent"
- VICTORY_POINTS_1591:0 "Alma-Ata"
- VICTORY_POINTS_1599:0 "Tbilisi"
- VICTORY_POINTS_1821:0 "Sverdlovsk"
- VICTORY_POINTS_3134:0 "Murmansk"
- VICTORY_POINTS_3140:0 "Tikhvin"
- VICTORY_POINTS_3335:0 "Bryansk"
- VICTORY_POINTS_3338:0 "Archangelsk"
- VICTORY_POINTS_3578:0 "Saratov"
- VICTORY_POINTS_3580:0 "Kursk"
- VICTORY_POINTS_3653:0 "Batumi"
- VICTORY_POINTS_3672:0 "Grozny"
- VICTORY_POINTS_3686:0 "Sevastopol"
- VICTORY_POINTS_3720:0 "Maikop"
- VICTORY_POINTS_4724:0 "Krasnoyarsk"
- VICTORY_POINTS_4797:0 "Irkutsk"
- VICTORY_POINTS_6245:0 "Kalinin"
- VICTORY_POINTS_6262:0 "Tula"
- VICTORY_POINTS_6338:0 "Kazan"
- VICTORY_POINTS_7274:0 "Novosibirsk"
- VICTORY_POINTS_7375:0 "Perm"
- VICTORY_POINTS_7661:0 "Baku"
- VICTORY_POINTS_9288:0 "Gomel"
- VICTORY_POINTS_9355:0 "Orel"
- VICTORY_POINTS_9753:0 "Astrakhan"
- VICTORY_POINTS_10641:0 "Yakutsk"
- VICTORY_POINTS_10696:0 "Omsk"
- VICTORY_POINTS_11159:1 "Petrozavodsk"
- VICTORY_POINTS_11202:0 "Pskov"
- VICTORY_POINTS_11241:0 "Vitebsk"
- VICTORY_POINTS_11225:0 "Kuibyshev"
- VICTORY_POINTS_11370:0 "Minsk"
- VICTORY_POINTS_11437:0 "Dnipropetrovsk"
- VICTORY_POINTS_11670:0 "Odessa"
- VICTORY_POINTS_12189:0 "Khabarovsk"
- VICTORY_POINTS_12320:0 "Yerevan"
- VICTORY_POINTS_10627:0 "Kyzyl"
- VICTORY_POINTS_4801:0 "Ulaanbaatar"
- VICTORY_POINTS_7799:0 "Uliastay"
- VICTORY_POINTS_7069:0 "Casablanca"
- VICTORY_POINTS_1145:0 "Algiers"
- VICTORY_POINTS_11969:0 "Tunis"
- VICTORY_POINTS_1149:0 "Tripoli"
- VICTORY_POINTS_11954:0 "Benghazi"
- VICTORY_POINTS_1130:0 "Tobruk"
- VICTORY_POINTS_4076:0 "Alexandria"
- VICTORY_POINTS_1071:0 "El-Alamein"
- VICTORY_POINTS_7011:0 "Cairo"
- VICTORY_POINTS_4709:0 "Urumqi"
+ VICTORY_POINTS_6380:0 "모스크바"
+ VICTORY_POINTS_525:0 "키예프"
+ VICTORY_POINTS_3529:0 "스탈린그라드"
+ VICTORY_POINTS_3151:0 "레닌그라드"
+ VICTORY_POINTS_6474:0 "스탈리노"
+ VICTORY_POINTS_9417:0 "로스토프"
+ VICTORY_POINTS_11375:0 "고리키"
+ VICTORY_POINTS_117:0 "노브고로드"
+ VICTORY_POINTS_121:0 "야로슬라블"
+ VICTORY_POINTS_306:0 "스몰렌스크"
+ VICTORY_POINTS_413:0 "보로네시"
+ VICTORY_POINTS_418:0 "카리프"
+ VICTORY_POINTS_957:0 "블라디보스토크"
+ VICTORY_POINTS_1278:0 "우파"
+ VICTORY_POINTS_1459:0 "타슈켄트"
+ VICTORY_POINTS_1591:0 "알마아타"
+ VICTORY_POINTS_1599:0 "트빌리시"
+ VICTORY_POINTS_1821:0 "스베르들롭스크"
+ VICTORY_POINTS_3134:0 "무르만스크"
+ VICTORY_POINTS_3140:0 "티흐빈"
+ VICTORY_POINTS_3335:0 "브랸스크"
+ VICTORY_POINTS_3338:0 "아르한겔스크"
+ VICTORY_POINTS_3578:0 "사라토프"
+ VICTORY_POINTS_3580:0 "쿠르스크"
+ VICTORY_POINTS_3653:0 "바투미"
+ VICTORY_POINTS_3672:0 "그로즈니"
+ VICTORY_POINTS_3686:0 "세바스토폴"
+ VICTORY_POINTS_3720:0 "마이코프"
+ VICTORY_POINTS_4724:0 "크라스노야르스크"
+ VICTORY_POINTS_4797:0 "이르쿠츠크"
+ VICTORY_POINTS_6245:0 "칼리닌"
+ VICTORY_POINTS_6262:0 "툴라"
+ VICTORY_POINTS_6338:0 "카잔"
+ VICTORY_POINTS_7274:0 "노보시비르스크"
+ VICTORY_POINTS_7375:0 "페름"
+ VICTORY_POINTS_7661:0 "바쿠"
+ VICTORY_POINTS_9288:0 "고멜"
+ VICTORY_POINTS_9355:0 "오룔"
+ VICTORY_POINTS_9753:0 "아스트라한"
+ VICTORY_POINTS_10641:0 "야쿠츠크"
+ VICTORY_POINTS_10696:0 "옴스크"
+ VICTORY_POINTS_11159:1 "페트로자보츠크"
+ VICTORY_POINTS_11202:0 "프스코프"
+ VICTORY_POINTS_11241:0 "비쳅스크"
+ VICTORY_POINTS_11225:0 "쿠이비셰프"
+ VICTORY_POINTS_11370:0 "민스크"
+ VICTORY_POINTS_11437:0 "드네프로페트로프스크"
+ VICTORY_POINTS_11670:0 "오데사"
+ VICTORY_POINTS_12189:0 "하바로프스크"
+ VICTORY_POINTS_12320:0 "예레반"
+ VICTORY_POINTS_10627:0 "키질"
+ VICTORY_POINTS_4801:0 "울란바토르"
+ VICTORY_POINTS_7799:0 "울리아스타이"
+ VICTORY_POINTS_7069:0 "카사블랑카"
+ VICTORY_POINTS_1145:0 "알제"
+ VICTORY_POINTS_11969:0 "튀니스"
+ VICTORY_POINTS_1149:0 "트리폴리"
+ VICTORY_POINTS_11954:0 "뱅가지"
+ VICTORY_POINTS_1130:0 "토브룩"
+ VICTORY_POINTS_4076:0 "알렉산드리아"
+ VICTORY_POINTS_1071:0 "엘-알라메인"
+ VICTORY_POINTS_7011:0 "카이로"
+ VICTORY_POINTS_4709:0 "우루무치"
  VICTORY_POINTS_5033:0 "Lhasa"
  VICTORY_POINTS_11913:0 "Nanjing"
  VICTORY_POINTS_6999:0 "Chongqing"
