--- a/GER_l_english.yml
+++ b/GER_l_english.yml
@@ -22,7 +22,7 @@ GER_deutsche_forschungsanstalt_fur_segelflug_desc:0 "독일 항공 연구소"
  GER_establish_SS_desc:0 "The only way to protect the leadership of Germany from external threats is an elite bodyguard. This bodyguard, the SS, will serve to keep the government operating smoothy and deal with those who may want to harm it."
  GER_aux_police_SS:0 "SS를 경찰의 보조로써 기용"
  GER_aux_police_SS_desc:0 "The role of the SS can naturally expand into the civilian spehre, both in Greater Germany and in occupied territories. Hopefully, they can deal with the partisan and terrorist threats that attack troops of the Wehrmacht."
- GER_elite_soldiers_SS:0 "SS를 전선의 병사로써 기용"
+ GER_elite_soldiers_SS:0 "SS를 전선 기용"
  GER_elite_soldiers_SS_desc:0 "The special training and teaching of SS soldiers make them much better than normal units in roles that require more dedication and loyalty to the väterland."
  GER_combine_SS_gestapo:0 "SS와 게슈타포 결합"
  GER_combine_SS_gestapo_desc:0 "Combining the SS and the Gestapo will give us a force capable of not only military operations, but also peace-keeping and anti-terrorist operations."
@@ -195,108 +195,108 @@ GER_deutsche_forschungsanstalt_fur_segelflug_desc:0 "독일 항공 연구소"
  GER_appoint_economic_positions_desc:0 "The only way for Germany to recover from the Great Depression fully is to ensure we have a united economy. This can be facilitated by appointing a president to the Reichsbank and a Minister of Economics."
  GER_two_side_economics:0 "양면"
  GER_two_side_economics_desc:0 "There are two groups in the German government vying for power. On one side there are the Technocrats, who believe that placing specialists in places of power and prioritizing industry over military will lead to the most sucessful economy. On the other side, there are the Autarks, who strive for a fully self-sufficient and militarily powerful Germany."
- GER_support_technocrats_I:0 "Side with the Technocrats"
+ GER_support_technocrats_I:0 "기술관료들 선택"
  GER_support_technocrats_I_desc:0 "If we want to have an economically powerful Germany, we must side with the Technocrats."
- GER_support_technocrats_II:0 "Give Technocrats Seats in the Government"
+ GER_support_technocrats_II:0 "정부에 기술관료들 등용"
  GER_support_technocrats_II_desc:0 "Giving Technocrats seats in government will allow them to further their policies more effectively."
- GER_support_autarks_I:0 "Side with the Autarks"
+ GER_support_autarks_I:0 "경제자립정책 선택"
  GER_support_autarks_I_desc:0 "If we want to have an economically powerful Germany, we must side with the Autarks."
- GER_support_autarks_II:0 "Give Autarks Seats in the Government"
+ GER_support_autarks_II:0 "정부에 경제자립정책 추진자들 등용"
  GER_support_autarks_II_desc:0 "Giving Autarks seats in government will allow them to further their policies more effectively."
- GER_jet_research:0 "Fund Jet Research"
+ GER_jet_research:0 "제트엔진 연구"
  GER_jet_research_desc:0 "The Jet engine will hurl us into a new age of warfare, allowing us to bombard our enemies with uncanny precision and dominate the skies above Germany, or so our scientists say."
- GER_volksgemeinschaft:0 "Support the Volksgemeinschaft"
+ GER_volksgemeinschaft:0 "폴크스게마인샤프트 지원"
  GER_volksgemeinschaft_desc:0 "The Volksgemeinschaft, or 'people's community', will assist in unifying and empowering the Germanic peoples of Europe and the world."
- GER_deutsche_arbeitsfront:0 "Establish the Deutsche Arbeitsfront"
+ GER_deutsche_arbeitsfront:0 "독일노동전선 구축"
  GER_deutsche_arbeitsfront_desc:0 "Replacing all of the German workers unions with one that is government controlled will allow us to ensure optimal efficiency in the German industrial complex, in addition to making it easier to institute industrial and economic reforms."
- GER_volkswagen:0 "Establish Volkswagen"
+ GER_volkswagen:0 "폴크스바겐 설립"
  GER_volkswagen_desc:0 "Mass producing a 'peoples car' will bolster morale and create a reinvestment in civilian infrastructure and industry. Not to mention, who doesn't like a good Kübelwagen?"
- GER_steelworks_issues:0 "Issues with the Steelworks"
+ GER_steelworks_issues:0 "제강소 문제"
  GER_steelworks_issues_desc:0 "The Vereinigte Stahlwerke AG has long been a primary steel producer for Germany, but it is a private company with little government oversight. Creating Reichswerke Hermann Göring will give us a steel producer that the government has control over."
- GER_nationalize_resource_industries:0 "Nationalize Strategic Resource Industries"
+ GER_nationalize_resource_industries:0 "전략 자원 산업 국유화"
  GER_nationalize_resource_industries_desc:0 "Nationalizing industries responsible for the production of strategic resources will improve our yield of these resources, allowing us to better sustain our military."
- GER_nationalize_aviation_industry:0 "Nationalize Aviation Industry"
+ GER_nationalize_aviation_industry:0 "항공 산업 국유화"
  GER_nationalize_aviation_industry_desc:0 "Nationalizing the industries responsible for manufacturing aircraft will improve our ability to produce and develop new military airplanes."
- GER_reform_uranprojekt:0 "Revive the Uranprojekt"
+ GER_reform_uranprojekt:0 "우란프로젝트의 부활"
  GER_reform_uranprojekt_desc:0 "The Uranprojekt, also known as the 'Uranium Club', had essentially been dissolved after invasion of Poland and the conscription of scientists into the military. Reviving this program by bringing scientists out of the military may prove to be a worthwhile venture for our scientific output."
- GER_rally_the_monarchists:0 "Rally the Monarchists"
+ GER_rally_the_monarchists:0 "군주제 지지자들의 집회"
  GER_rally_the_monarchists_desc:0 "The failures of the Weimar government and the corruption of the NSDAP government contrast against German's glorious imperial history. We must restore Germany to its former imperial glory in order to ensure our place as a world power."
- GER_a_new_reich:0 "Fight for a New Reich"
+ GER_a_new_reich:0 "새로운 국가를 위한 싸움"
  GER_a_new_reich_desc:0 "After rallying monarchists and other pro-Kaiser parties, it is finally time for us to take power in Germany and restore the Kaiserreich to its former glory!"
- GER_consolidate_new_reich:0 "Consolidate the Fourth Reich"
+ GER_consolidate_new_reich:0 "제4제국"
  GER_consolidate_new_reich_desc:0 "We have takent he Reichstag and have a more-or-less provisional government with our new Kaiser at its head. Now we must solidify and consolidate Germany into the Fourth Reich."
- GER_restore_the_empire:0 "Restore the Reich"
+ GER_restore_the_empire:0 "제국 복원"
  GER_restore_the_empire_desc:0 "After the Second Reich's unfortunate defeat in the Great War and the signing of the Treaty of Versailles, many rightfully German territories were stripped away from the Reich. We must begin the long and tedious process of reclaiming these territores."
- GER_european_claims:0 "Restoring Our European Territories"
+ GER_european_claims:0 "유럽 영토 복원"
  GER_european_claims_desc:0 "First and foremost, we must take back the core territories of the German Reich. Most importantly, the now French region of Alsace-Lorraine and the Polish city of Danzig."
- GER_african_claims:0 "Restoring Our African Colonies"
+ GER_african_claims:0 "아프리카 식민지 복원"
  GER_african_claims_desc:0 "The British and French used the Versailles Treaty to justify their consolidation of influence over African nations and colonies, which goes to show the corruption of these western imperialists. Retaking these colonies will reestablish German influence in the region and provide an important counterweight to British and French expansionism."
- GER_asian_claims:0 "Restoring Our Asian Colonies"
+ GER_asian_claims:0 "아시아 식민지 복원"
  GER_asian_claims_desc:0 "Similarly to Africa, the former allies used the Versailles Treaty to justify their imperialist tendancies and their thefts from the German people. Now we must start on the long road of restoring our former colonies in Asia and the Pacific."
- GER_establish_imperial_german_army:0 "Establish the Deutsches Heer"
+ GER_establish_imperial_german_army:0 "독일 육군 설립"
  GER_establish_imperial_german_army_desc:0 "Reviving the Deutsches Heer in the model of the Nazi Wehrmacht will certainly give the Fourth Reich one of the strongest and most effective fighting forces in the world."
- GER_support_landwehr:0 "Support the Landwehr"
+ GER_support_landwehr:0 "란트베어 지원"
  GER_support_landwehr_desc:0 "Supporting the Landwehr will ensure us a more professional and effective army, at the cost of reducing its size."
- GER_support_freikorps:0 "Support the Freikorps"
+ GER_support_freikorps:0 "자유군단 지원"
  GER_support_freikorps_desc:0 "Supporting the Freikorps will give our military more popular support, making it easier to recruit civilians. This will inevitably make it harder to uphold professional standards, though."
- GER_gott_mit_uns:0 "Gott Mit Uns"
+ GER_gott_mit_uns:0 "신께서 우리와 함께하신다"
  GER_gott_mit_uns_desc:0 "An Imperial motto, the expression of German religious, political and ethnic single-mindedness. The unity of altar, throne and Volk."
- GER_draft_new_constitution:0 "Draft a New Constitution"
+ GER_draft_new_constitution:0 "새로운 헌법 초안"
  GER_draft_new_constitution_desc:0 "In order to ensure national unity and prevent extremists from taking power, we must ensure that our monarchy is constituionally and democratically accountable. Only then will the Fourth Reich become a beacon for the rest of the world to follow."
- GER_prioritize_infrastructure:0 "Prioritize Infratstructure"
+ GER_prioritize_infrastructure:0 "사회 기반 시설 우선 순위 지정"
  GER_prioritize_infrastructure_desc:0 "Keeping our infrastructure up to date will ensure that our industrial machine can run more effectively in all sectors."
- GER_prioritize_civilian_industry:0 "Prioritize Civilian Industries"
+ GER_prioritize_civilian_industry:0 "민간 산업 우선 순위 지정"
  GER_prioritize_civilian_industry_desc:0 "Ensuring a strong civilian industry will allow us to further the quality of life for our people, in addition to allowing more rapid buildup in other sectors."
- GER_prioritize_military_industry:0 "Prioritize Military Industries"
+ GER_prioritize_military_industry:0 "군수 산업 우선 순위 지정"
  GER_prioritize_military_industry_desc:0 "The only route to a strong military is a strong backing of military industry. A strong military industry will open up new opportunities for our military expansion."
- GER_prioritize_defensive_construction:0 "Prioritize Defensive Constructions"
+ GER_prioritize_defensive_construction:0 "방어 요새 우선 순위 지정"
  GER_prioritize_defensive_construction_desc:0 "In these turbulent political times, Germany is at its greatest risk of hostile invasion from an outside force. Thus, in order to ensure stability and securtiy for the German people, we must prioritize defensive contructions."
- GER_kaiser_wilhelm_society:0 "Revitalize the Kaiser Wilhelm Society"
+ GER_kaiser_wilhelm_society:0 "카이저 빌헬름 협회 재활성화"
  GER_kaiser_wilhelm_society_desc:0 "Between conscription and anti-jewish nuremburg laws, the scientific base of Germany has been hardpressed to continue effective research. Revitalizing the Kaiser Wilhelm Society will allow our military and civilian research to soar to new heights."
- GER_return_scientists:0 "Exempt Scientists from Military Service"
+ GER_return_scientists:0 "과학자들의 병역 면제"
  GER_return_scientists_desc:0 "Many former scientists have been brought into the military by conscription or other mandatory systems. By exepmting them from these programs, we will detract from our manpower pool, but ensure that our research is at the cutting-edge."
- GER_operation_isabella:0 "Operation Isabella"
+ GER_operation_isabella:0 "이사벨라 작전"
  GER_operation_isabella_desc:0 "The British have long had great influence over the Mediterranean Sea and surrounding areas. By taking key ports in Spain, Portugal, and most importantly Gibraltar, we can further strenghten our grip on Britain."
- GER_enigma:0 "Improve Enigma"
+ GER_enigma:0 "에니그마 개선"
  GER_enigma_desc:0 "Continuing research into the Enigma encryption methods may yield stunning results that will allow us to further conceal our strategic communications from the enemy."
- GER_volkssturm:0 "Form the Volkssturm"
+ GER_volkssturm:0 "시민군 설립"
  GER_volkssturm_desc:0 "Although the war is beginning to turn against our favor, we still have a fighting chance if we as Germans band together and fight the invader head-on! This is the final component to our total war, and with the Volkssturm Germany will never be defeated!"
- GER_iraq_friend:0 "Befriend Iraq"
+ GER_iraq_friend:0 "이라크와의 친선"
  GER_iraq_friend_desc:0 "Iraq has a valuable strategic position in the Middle East as well as a large pool of resources necessary for the German war machine; befriending their country may prove to be a wise decision that won't force us to redirect our military to yet another front."
- GER_iraq_war:0 "Invade Iraq"
+ GER_iraq_war:0 "이라크 침공"
  GER_iraq_war_desc:0 "Iraq has a valuable strategic position in the Middle East as well as a large pool of resources necessary for the German war machine; invading their country will allow us to hold this key position and harvest their resources to full effect."
- GER_iran_friend:0 "Befriend Iran"
+ GER_iran_friend:0 "이란과의 친선"
  GER_iran_friend_desc:0 "Iran has a large border with the Soviet Union and a very strategic position as the gateway to Asia; befriending their country will be a fruitful investment that doesn't pull necessary resources away from our main campaign."
- GER_iran_war:0 "Invade Iran"
+ GER_iran_war:0 "이란 침공"
  GER_iran_war_desc:0 "Iran has a large border with the Soviet Union and a very strategic position as the gateway to Asia; invading their country will allow us to further exert pressure across the Asian continent as well as give us another strategic front in Southern Russia."
- GER_influence_brazil:0 "Influence Brazil"
+ GER_influence_brazil:0 "브라질에 영향력 행사"
  GER_influence_brazil_desc:0 "Brazil, in addition to its natural resources, has a very strategic position in the americas; having an ally close to vulnerable South American countries in addition to being within striking range of the United States is worthy of consideration"
- GER_revive_brest_litovsk:0 "Revive the Treaty of Brest-Litovsk"
+ GER_revive_brest_litovsk:0 "브레스트-리토프스크 조약의 부활"
  GER_revive_brest_litovsk_desc: "At the moment our war with the Russians is sucessful, but our military is required on other fronts. Reviving the Treaty of Brest-Litovsk will allow us to make peace with the Russians and achieve our desired territorial gains."
- GER_5_factor:0 "5 Factor Enigma"
+ GER_5_factor:0 "5 인수 에니그마"
  GER_5_factor_desc:0 "Going to 5 factors will greatly improve our Encryption"
- GER_8_factor:0 "8 Factor Enigma"
+ GER_8_factor:0 "8 인수 에니그마"
  GER_8_factor_desc:0 "Going to 8 factors will make our Encryption Surely impossable to crack!"
  
  #Ideas
- GER_foreign_volunteers_idea:0 "Foreign Volunteers"
- GER_establish_SS_idea:0 "SS Established"
- GER_aux_police_SS_idea:0 "SS Auxiliary Police"
- GER_elite_soldiers_SS_idea:0 "SS Frontline Soldiers"
- GER_combine_SS_gestapo_idea:0 "Gestapo Absorbed into the SS"
- GER_purge_political_opponents_idea:0 "Political Opponents Purged"
- GER_military_industrial_complex_idea:0 "Expanding the Military Industries"
- GER_total_war_idea:0 "Total War"
- GER_denounce_versailles_idea:0 "Versailles Denounced!"
- GER_political_turmoil_idea:0 "German Political Turmoil"
- GER_repeal_reichstag_fire_decree_idea:0 "Reichstag Fire Decree Repealed"
- GER_world_revolution_idea:0 "Home of the World Revolution"
- GER_progress_cult_idea:0 "Progress Cult"
- GER_establish_stasi_idea:0 "Stasi Established"
- GER_recruit_grenztruppen_idea:0 "Grenztruppen Recruitment"
- GER_rehabilitate_military_idea:0 "Rehabilitated Military"
- GER_establish_NVA_idea:0 "Nationale Volksarmee Established"
- GER_production_effort_idea:0 "Industrialization Effort"
+ GER_foreign_volunteers_idea:0 "외국인 자원병"
+ GER_establish_SS_idea:0 "SS 설립됨"
+ GER_aux_police_SS_idea:0 "SS를 보조경찰로"
+ GER_elite_soldiers_SS_idea:0 "SS를 전선으로"
+ GER_combine_SS_gestapo_idea:0 "SS와 게슈타포의 결합"
+ GER_purge_political_opponents_idea:0 "정적 숙청"
+ GER_military_industrial_complex_idea:0 "군수 산업 확장"
+ GER_total_war_idea:0 "총력전"
+ GER_denounce_versailles_idea:0 "베르사유 조약 비난!"
+ GER_political_turmoil_idea:0 "독일의 정치적 혼란"
+ GER_repeal_reichstag_fire_decree_idea:0 "안전보장법 번복"
+ GER_world_revolution_idea:0 "세계혁명의 고향"
+ GER_progress_cult_idea:0 "진보 추종"
+ GER_establish_stasi_idea:0 "비밀경찰 설립"
+ GER_recruit_grenztruppen_idea:0 "국경부대 모병"
+ GER_rehabilitate_military_idea:0 "군대 재건"
+ GER_establish_NVA_idea:0 "국가 인민군 설립"
+ GER_production_effort_idea:0 "산업화 개시"
  GER_collectivize_industry_idea:0 "Industry Collectivized"
  GER_restore_weimar_idea:0 "Push to the Weimar System"
  GER_post_fascism_recovery_idea:0 "Recovery from Fascism"
