--- a/GER_l_english.yml
+++ b/GER_l_english.yml
@@ -273,9 +273,9 @@ GER_deutsche_forschungsanstalt_fur_segelflug_desc:0 "독일 항공 연구소"
  GER_influence_brazil_desc:0 "Brazil, in addition to its natural resources, has a very strategic position in the americas; having an ally close to vulnerable South American countries in addition to being within striking range of the United States is worthy of consideration"
  GER_revive_brest_litovsk:0 "브레스트-리토프스크 조약의 부활"
  GER_revive_brest_litovsk_desc: "At the moment our war with the Russians is sucessful, but our military is required on other fronts. Reviving the Treaty of Brest-Litovsk will allow us to make peace with the Russians and achieve our desired territorial gains."
- GER_5_factor:0 "5 인수 에니그마"
+ GER_5_factor:0 "5진법 에니그마"
  GER_5_factor_desc:0 "Going to 5 factors will greatly improve our Encryption"
- GER_8_factor:0 "8 인수 에니그마"
+ GER_8_factor:0 "8진법 에니그마"
  GER_8_factor_desc:0 "Going to 8 factors will make our Encryption Surely impossable to crack!"
  
  #Ideas
@@ -297,12 +297,12 @@ GER_deutsche_forschungsanstalt_fur_segelflug_desc:0 "독일 항공 연구소"
  GER_rehabilitate_military_idea:0 "군대 재건"
  GER_establish_NVA_idea:0 "국가 인민군 설립"
  GER_production_effort_idea:0 "산업화 개시"
- GER_collectivize_industry_idea:0 "Industry Collectivized"
- GER_restore_weimar_idea:0 "Push to the Weimar System"
- GER_post_fascism_recovery_idea:0 "Recovery from Fascism"
- GER_marshall_plan_idea:0 "The Marshall Plan"
- GER_replace_reichsmark_idea:0 "Reichsmark Replaced"
- GER_economic_miracle_idea:0 "The German Economic Miracle"
+ GER_collectivize_industry_idea:0 "산업 집산화"
+ GER_restore_weimar_idea:0 "바이마르 체제 복원"
+ GER_post_fascism_recovery_idea:0 "파시즘으로부터의 회복"
+ GER_marshall_plan_idea:0 "마샬 계획"
+ GER_replace_reichsmark_idea:0 "라이히스마르크 교체"
+ GER_economic_miracle_idea:0 "독일 경제 "
  GER_post_war_economics_idea:0 "Peacetime Economics"
  GER_civilian_infrastructure_idea:0 "Development of Civilian Infrastructure"
  GER_establish_bundeswehr_idea:0 "Bundeswehr Established"
