--- a/ROM_I_english.yml
+++ b/ROM_I_english.yml
@@ -1,4 +1,4 @@
 ﻿l_english:
-DOD_romania.1000.t:0 "The New Staff"
-DOD_romania.1000.d:0 "The new communist regime is seeking to reorganize the army and replace the right wing officers with left leaning officers,we have assembled some promising officers and are preparing to promote them."
-DOD_romania.1000.a:0 "Im Sure They Can Do Their Job"
+DOD_romania.1000.t:0 "새로운 참모"
+DOD_romania.1000.d:0 "새 공산정권은 군대를 재편성하고 우익 장교들을 좌익 장교로 교체하려 하고 있으며, 우리는 유망한 장교들을 몇 명 모아 그들을 승진시킬 준비를 하고 있습니다."
+DOD_romania.1000.a:0 "그들은 그들의 직무를 다할거라고 장담하지."
