--- a/BOS_l_english.yml
+++ b/BOS_l_english.yml
@@ -1,5 +1,5 @@
 l_english:
- BOS_fascism:0 "보스니아 헤르체고비나."
+ BOS_fascism:0 "보스니아 헤르체고비나"
  BOS_fascism_DEF:0 "보스니아 헤르체고비나"
  BOS_democratic:0 "보스니아 헤르체고비나"
  BOS_democratic_DEF:0 "보스니아 헤르체고비나"
