--- a/CAN_l_english.yml
+++ b/CAN_l_english.yml
@@ -7,7 +7,7 @@ l_english:
  CAN_chevrolet_canada:0 "쉐보레 캐나다"
  CAN_ford:0 "포드 자동차 회사"
  CAN_sorel_industries:0 "소렐 산업"
- CAN_canadian_power_boat_company:0 "캐나다 모터보트 기업"
+ CAN_canadian_power_boat_company:0 "캐나다 모터보트 기업."
  CAN_marine_industries:0 "해양 산업"
  CAN_davie_shipbuilding:0 "데이비 조선"
  pratt_and_whitney:0 "프랫앤휘트니"
