--- a/CAT_l_english.yml
+++ b/CAT_l_english.yml
@@ -58,11 +58,11 @@ l_english:
  CAT_jose_villalba_rubio:0 "조제 빌랼바 루비오"
  CAT_eduardo_medrano_rivas:0 "에두아르도 메드라노 리바스"
  
- CAT_infantry_equipment_0:0 "Mauser M93"
- CAT_infantry_equipment_0_short:0 "Mauser M93"
+ CAT_infantry_equipment_0:0 "마우저 M93"
+ CAT_infantry_equipment_0_short:0 "마우저 M93"
  CAT_infantry_equipment_1:0 "Destroyer Carbine"
  CAT_infantry_equipment_1_short:0 "Destroyer Carbine"
- CAT_infantry_equipment_2:0 "Labora Fontbernat M38"
- CAT_infantry_equipment_2_short:0 "Labora Fontbernat M38"
- CAT_infantry_equipment_3:0 "EMP-Coruña"
- CAT_infantry_equipment_3_short:0 "EMP-Coruña"  
+ CAT_infantry_equipment_2:0 "루바 폰트베르나트 M38"
+ CAT_infantry_equipment_2_short:0 "루바 폰트베르나트 M38"
+ CAT_infantry_equipment_3:0 "EMP-코루냐"
+ CAT_infantry_equipment_3_short:0 "EMP-코루냐"  
