--- a/CFM_l_english.yml
+++ b/CFM_l_english.yml
@@ -31,7 +31,7 @@ l_english:
  cityfall.6.c:0 "이 미친 쪽바리놈들을 분쇄해 버리겠다!!"
  cityfall.7.t:0 "베를린 함락"
  cityfall.7.d:0 "아케르스텐담 거리에서는 아직도 탱크끼리 전투가 벌어지고 있지만, 다른 곳에서는 독일 병사들이 항복하고 있으며 승리한 스페인 군대에게 무기를 넘기고 있습니다.\n\n전투로 인해 구도심 대부분이 파괴되고 도로들은 사용 불능 상태가 됐지만, 스페인 군대가 결국 베를린 지하철을 확보함으로서 독일군은 땅 속에서 툭툭 튀어나오는 스페인 군대를 상대해야만 했습니다.\n\n이제 마지막 방어선이 격파되었으며, 독일군은 항복하거나 급하게 퇴각하고 있습니다. 드디어 대독일국이 스페인에게 패배한 모양이군요."
- cityfall.7.a:0 "Madre de Dios!"
+ cityfall.7.a:0 "야단났구만!(Madre de Dios!)"
  cityfall.7.b:0 "스페인의 영광스러운 날입니다!"
  cityfall.7.c:0 "누가 이럴 거라고 생각이나 했겠냐고!!"
  cityfall.8.t:0 "베를린 함락"
@@ -175,10 +175,10 @@ l_english:
  cityfall.35.b:0 "레코빅이라는 이름은 영원히 기억되리."
  cityfall.35.c:0 "모든 유고슬라비아 제국주의자에게 죽음을!"
  cityfall.36.t:0 "모스크바 함락"
- cityfall.36.d:0 "After fierce fighting which has left most of the former Russian capital consumed with flames, Chinese troops have hoisted their flag over the battered remains of the Kremlin today.\n\nRussian troops are now retreating into the countryside after the local commander announced the surrender of Russian forces to his men, and it seems that the remaining Russian forces will be continuing a guerilla campaign against the Chinese agressors.\n\nThe Chinese have touted this as a great, final victory against one of their biggest rivals, and many fear this is their first step into conquest of Europe itself."
+ cityfall.36.d:0 "러시아 수도의 대부분을 화염에 휩싸이게 한 격렬한 전투 후에, 중국군은 오늘 박살난 크렘린의 잔해 위에 그들의 깃발을 꽂았습니다.\n\n러시아군은 현지 사령관이 군사들에게 러시아군의 항복을 선언하자 현재 농촌으로 후퇴하고 있으며, 남은 러시아군은 공격해오는 중국군들에 대한 게릴라전을 계속할 것으로 보입니다.중국인들은 이것을 그들의 가장 큰 경쟁자들 중 하나에 대한 위대한 최후의 승리라고 선전했고, 많은 사람들은 이것이 유럽을 정복하기 위한 첫걸음이라고 두려워하고 있습니다."
  cityfall.36.a:0 "막을 수는 있어요?"
- cityfall.36.b:0 "They should have bowed when they had the chance."
- cityfall.36.c:0 "Whether in the streets or in the forests, we shall fight them!"
+ cityfall.36.b:0 "그들은 기회가 있을때 알아서 굽혀야 했어."
+ cityfall.36.c:0 "거리에서도 숲에서도, 우리는 그들과 싸울것 입니다!"
  cityfall.37.t:0 "모스크바 함락"
  cityfall.37.d:0 "몇 시간 동안 벌어진 전투 끝에, 부탄 돌격병이 애처로운 도시의 잔해를 자랑스럽게 행진하며, 위대한 부탄은 모스크바의 바보 러시아 방어군을 손쉽게 격파했습니다.\n\n부탄 군대의 우세에 러시아 병사들의 의지는 꺾였고 백만 명이 넘는 포로가 잡혔습니다. 러시아 정부는 저항을 이어가겠다고 엄포를 놓았지만, 이제 아무도 부탄의 북방 우세를 의심하지 않습니다."
  cityfall.37.a:0 "부탄의 위협을 막을 수 있을까요?"
@@ -191,12 +191,12 @@ l_english:
  cityfall.38.c:0 "전부 바다로 다시 쳐넣겠습니다."
  cityfall.39.t:0 "워싱턴 함락"
  cityfall.39.d:0 "역사상 두 번째로, 영국 병사들이 미국의 수도를 완전히 불태웠습니다. 양 군의 인명 손실과 물자 피해가 엄청났고, 영국의 군함과 미국의 해안 요새가 수 없이 박살났음에도, 영국은 결국 이 지역의 통제권을 얻어냈습니다.\n\nAmerican papers have reacted in horror, decrying that the Union may finally be broken by its oldest enemies, while the British proclaim much the same, though in a much more positive light."
- cityfall.39.a:0 "They have taken back their colonies."
- cityfall.39.b:0 "Nasty rebels have finally gotten their comeupance."
- cityfall.39.c:0 "DIRTY REDCOAT GO HOME."
+ cityfall.39.a:0 "그들의 식민지를 되찾았군요."
+ cityfall.39.b:0 "끔찍한 반군들이 마침내 그들의 벌을 받았군요."
+ cityfall.39.c:0 "더러운 새끼들, 당장 집으로꺼져버려."
  cityfall.40.t:0 "워싱턴 함락"
  cityfall.40.d:0 "Polish soldiers have finally overcomed the defenders of the US capital today after a surprisingly quick battle for the center of the city. Although the Poles faced fierce resistance as they pushed through Bethesda and Fort Meade, the capital itself fell relatively quickly thanks to the antics of the Polish special services.\n\nSneaking through the cities old sewers, a team managed to infiltrate the American white house and, thinking that the battle had already been finished thanks to a temporary lull in the fighting and a coincidental lack of American defenders in the building, hoisted the Polish flag from the top. American forces, thinking they had been outflanked, began surrendering shortly thereafter, and the Poles now have full control of the former American capital."
- cityfall.40.a:0 "The Poles find a way."
+ cityfall.40.a:0 "폴란드인들이 방법을 찾았네요.The Poles find a way."
  cityfall.40.b:0 "The elite Polish military outwits the enemy once again!"
  cityfall.40.c:0 "지금 장난해!?"
  cityfall.41.t:0 "워싱턴 함락"
