--- a/GER_l_english.yml
+++ b/GER_l_english.yml
@@ -193,7 +193,7 @@ GER_deutsche_forschungsanstalt_fur_segelflug_desc:0 "독일 항공 연구소"
  GER_generalplan_ost_II_desc:0 "The slavs of eastern Europe have always interfered with the interests of Germany; it is time that we deal with these issues further and expand our Lebensraum."
  GER_appoint_economic_positions:0 "경제 장관 임명"
  GER_appoint_economic_positions_desc:0 "The only way for Germany to recover from the Great Depression fully is to ensure we have a united economy. This can be facilitated by appointing a president to the Reichsbank and a Minister of Economics."
- GER_two_side_economics:0 "양면"
+ GER_two_side_economics:0 "양면 "
  GER_two_side_economics_desc:0 "There are two groups in the German government vying for power. On one side there are the Technocrats, who believe that placing specialists in places of power and prioritizing industry over military will lead to the most sucessful economy. On the other side, there are the Autarks, who strive for a fully self-sufficient and militarily powerful Germany."
  GER_support_technocrats_I:0 "기술관료들 선택"
  GER_support_technocrats_I_desc:0 "If we want to have an economically powerful Germany, we must side with the Technocrats."
@@ -259,7 +259,7 @@ GER_deutsche_forschungsanstalt_fur_segelflug_desc:0 "독일 항공 연구소"
  GER_operation_isabella_desc:0 "The British have long had great influence over the Mediterranean Sea and surrounding areas. By taking key ports in Spain, Portugal, and most importantly Gibraltar, we can further strenghten our grip on Britain."
  GER_enigma:0 "에니그마 개선"
  GER_enigma_desc:0 "Continuing research into the Enigma encryption methods may yield stunning results that will allow us to further conceal our strategic communications from the enemy."
- GER_volkssturm:0 "시민군 설립"
+ GER_volkssturm:0 "국민돌격대 설립"
  GER_volkssturm_desc:0 "Although the war is beginning to turn against our favor, we still have a fighting chance if we as Germans band together and fight the invader head-on! This is the final component to our total war, and with the Volkssturm Germany will never be defeated!"
  GER_iraq_friend:0 "이라크와의 친선"
  GER_iraq_friend_desc:0 "Iraq has a valuable strategic position in the Middle East as well as a large pool of resources necessary for the German war machine; befriending their country may prove to be a wise decision that won't force us to redirect our military to yet another front."
@@ -302,102 +302,102 @@ GER_deutsche_forschungsanstalt_fur_segelflug_desc:0 "독일 항공 연구소"
  GER_post_fascism_recovery_idea:0 "파시즘으로부터의 회복"
  GER_marshall_plan_idea:0 "마샬 계획"
  GER_replace_reichsmark_idea:0 "라이히스마르크 교체"
- GER_economic_miracle_idea:0 "독일 경제 "
- GER_post_war_economics_idea:0 "Peacetime Economics"
- GER_civilian_infrastructure_idea:0 "Development of Civilian Infrastructure"
- GER_establish_bundeswehr_idea:0 "Bundeswehr Established"
- GER_defense_and_deterence_idea:0 "German Defense and Deterrence"
- GER_lebensraum_idea:0 "Expansion of Lebensraum"
- GER_generalplan_ost_I_idea:0 "Resistance to Generalplan Ost"
- GER_generalplan_ost_II_idea:0 "Partisan Resistance to Generalplan Ost"
- hjalmar_schacht_idea:0 "Hjalmar Schacht"
- walther_funk_idea:0 "Walther Funk"
- volksgemeinschaft_idea:0 "Volksgemeinschaft"
- deutsche_arbeitsfront_idea:0 "Deutsche Arbeitsfront"
- volkswagen_idea:0 "Volkswagen"
- goeringworks_idea:0 "Reichswerke Hermann Göring"
- united_steel_idea:0 "Vereinigte Stahlwerke AG"
- political_disagreement_idea:0 "Two-Sided Economics"
- technocrat_support_I_idea:0 "Technocrat Support"
- technocrat_support_II_idea:0 "Technocratic Government"
- autark_support_I_idea:0 "Autark Support"
- autark_support_II_idea:0 "Autarkic Government"
- persecute_scientists:0 "Persecute Jewish Scientists"
- war_of_annihilation:0 "War of Annihilation"
- GER_rally_the_monarchists_idea:0 "Rally the Monarchists"
- GER_unstable_government:0 "Unstable Government"
- GER_fourth_reich:0 "The Fourth Reich"
- GER_imperial_restoration:0 "Imperial Restoration"
- GER_imperial_army_idea:0 "Deutsches Heer"
- GER_landwehr_idea:0 "Landwehr Influence"
- GER_freikorps_idea:0 "Freikorps Influence"
- GER_gott_idea:0 "Gott Mit Uns"
- GER_new_german_constitution:0 "A New German Constitution"
- GER_prioritize_infrastructure_idea:0 "Prioritization of Infrastructure"
- GER_prioritize_civilian_industry_idea:0 "Prioritization of Civilian Industries"
- GER_prioritize_military_industry_idea:0 "Prioritization of Military Industries"
- GER_prioritize_defensive_construction_idea:0 "Prioritization of Defensive Constructions"
- GER_return_scientists_idea:0 "Exempt Scientists from Military Service"
- GER_volkssturm_idea:0 "The Volkssturm"                         
+ GER_economic_miracle_idea:0 "독일 경제"
+ GER_post_war_economics_idea:0 "평화로운 경제"
+ GER_civilian_infrastructure_idea:0 "민간 사회 기반 시설 개발"
+ GER_establish_bundeswehr_idea:0 "연방군 설립"
+ GER_defense_and_deterence_idea:0 "독일 국방과 억제"
+ GER_lebensraum_idea:0 "생활권의 확장"
+ GER_generalplan_ost_I_idea:0 "동방 계획에 대한 저항"
+ GER_generalplan_ost_II_idea:0 "동방 계획에 대한 조직적 저항"
+ hjalmar_schacht_idea:0 "얄마르 샤흐트"
+ walther_funk_idea:0 "발터 풍크"
+ volksgemeinschaft_idea:0 "폴크스게마인샤프트"
+ deutsche_arbeitsfront_idea:0 "독일노동전선"
+ volkswagen_idea:0 "폴크스바겐"
+ goeringworks_idea:0 "라이크스베르케 헤르만 괴링"
+ united_steel_idea:0 "페라이닉테 슈탈베르케 AG"
+ political_disagreement_idea:0 "양면 경제"
+ technocrat_support_I_idea:0 "기술관료 지원"
+ technocrat_support_II_idea:0 "기술관료정"
+ autark_support_I_idea:0 "경제자립정책 지원"
+ autark_support_II_idea:0 "경제자립국가"
+ persecute_scientists:0 "유대인 과학자 박해"
+ war_of_annihilation:0 "전멸전"
+ GER_rally_the_monarchists_idea:0 "군주제 지지자들의 결집"
+ GER_unstable_government:0 "불안정한 정부"
+ GER_fourth_reich:0 "제4제국"
+ GER_imperial_restoration:0 "제국 복원"
+ GER_imperial_army_idea:0 "독일 육군"
+ GER_landwehr_idea:0 "란트베어의 영향력"
+ GER_freikorps_idea:0 "자유군단의 영향력"
+ GER_gott_idea:0 "신께서 우리와 함께하신다"
+ GER_new_german_constitution:0 "새로운 독일 헌법"
+ GER_prioritize_infrastructure_idea:0 "사회 기반 시설 우선 순위 지정"
+ GER_prioritize_civilian_industry_idea:0 "민간 산업 우선 순위 지정"
+ GER_prioritize_military_industry_idea:0 "군수 산업 우선 순위 지정"
+ GER_prioritize_defensive_construction_idea:0 "방어 요새 우선 순위 지정"
+ GER_return_scientists_idea:0 "과학자들의 병역 면제"
+ GER_volkssturm_idea:0 "국민돌격대"                         
  
- erwache.1.t:0 "Appointing Economic Positions"
- erwache.1.d:0 "We have two appointment options for the offices of Reichsbank President and Economic Minister. One of the possible appointees, Hjalmar Schacht, is very good at working with Germany's companies and developing civilain infrastructure, but his lack of loyalty to the NSDAP and distain for military spending make him a worrying choice. Our second possible appointee, Walther Funk, is very loyal to the NSDAP and is a major proponent of military spending. If we are to make any good progress with German recovery, we must choose one of these two men to lead our economy."
- erwache.1.a:0 "Hjalmar Schacht"
- erwache.1.b:0 "Walther Funk"
- erwache.2.t:0 "The Problem of the Steelworks"
- erwache.2.d:0 "As the German military grows, we must ensure that we have a secure and stable source of steel. Our current primary steel producer, Vereinigte Stahlwerke AG, has been a valuable ally in the NSDAP's rise to power and is a major employer of German workers. But, the Stahlwerke hasn't been yielding as much steel as it could be; forming and supporting Reichswerke Hermann Göring instead may yield a significantly larger amount of steel and support the German war effort more effectively."
- erwache.2.a:0 "Reichswerke Hermann Göring"
- erwache.2.b:0 "Vereinigte Stahlwerke AG"
- erwache.4.t:0 "The Fall of the Nazis"
- erwache.4.d:0 "After the rapid rise of monarchists and other pro-Kaiser parties, the NSDAP has found no alternatives but to surrender control of the German government. This historic decision is being officially declared in the German Reichstag, but it is still unknown who will reign as the Kaiser of the new Fourth Reich. We can either call upon Wilhelm the Second, the ruler of the Second Reich during the Great War, or Prince Wilhelm the Third, son of Wilhelm the Second and a man very much capable of holding this historic position."
- erwache.4.a:0 "Wilhelm II will lead us"
- erwache.4.b:0 "Prince Wilhelm III will lead us"
- erwache.5.t:0 "The German Civil War"
- erwache.5.d:0 "Monarchists led a sucessful coup against the NSDAP, storming the Reichstag and taking over the government. In the ashes of the burned-down Reichstag, former Chancellor Adolf Hitler lays dead, leaving Heinrich Himmler as the new head of government stationed in Munich. Himmler and the remaining Nazi loyalists have started a civil war against our new imperial government, and we must fight to reunify Germany. Who will lead us on our path to the unified Fourth Riech: former Kaiser Wilhelm II or his son, Prince Wilhelm III?"
- erwache.5.a:0 "Wilhelm II will lead us"
- erwache.5.b:0 "Prince Wilhelm III will lead us"
- erwache.6.t:0 "Germany Demands Defensive Occupation"
- erwache.6.d:0 "Germany has long had interests in our country, but even this is a suprising eventuallity. Germany is demanding that we allow their forces to occupy our country, essentially turning us into a puppet."
- erwache.6.a:0 "We need defense from our enemies"
- erwache.6.b:0 "We will not cede our freedom!"
- erwache.7.t:0 "Germany Offers Peace!"
- erwache.7.d:0 "The Soviet Union has been proposed treaty to end the German-Soviet war in the East. The treaty included terms to cede several western Soviet-occupied territories to the Germans in exchange for peace. These terms are similar to the treaty of Brest-Litovsk, which ended the German-Soviet conflict during the First World War."
- erwache.7.a:0 "Reject the Terms!"
- erwache.7.b:0 "Accept the Terms."
+ erwache.1.t:0 "경제적 입장"
+ erwache.1.d:0 "우리는 독일 국립 은행의 총재와 경제장관을 선택해야 합니다. 유력한 후보자중 한명인 얄마르 샤흐트는 독일의 기업들과 친하고 사회 기반 시설을 개발하는데 능숙하지만, NSDAP에 대한 충성심이 부족하고 군비지출을 줄이려 하기에 걱정이 됩니다. 두번째로 발터 풍크는 NSDAP에 충성심이 대단하고 군비지출에 대하여 호의적입니다. 독일 경제의 회복을 이루려면 이 두사람 중에서 한명을 골라야 합니다."
+ erwache.1.a:0 "얄마르 샤흐트"
+ erwache.1.b:0 "발터 풍크"
+ erwache.2.t:0 "제철소 문제"
+ erwache.2.d:0 "독일군이 성장함에 따라 우리는 안정적인 철강 공급원을 확보해야 합니다. 우리의 1차 철강 생산 업체인 페라이닉테 슈탈베르케 AG는 NSDAP가 권력을 장악하는데 큰 도움을 주었고 독일 노동자들의 주요 고용주였습니다. 그러나 슈탈베르케는 강철을 최대한 생산하는데 주력하고 있지 않습니다. 대신 우리는 릭스베르케 헤르만 괴링사를 설립하고 지원하여 많은 강철을 생산하고 독일의 전쟁 수행 능력을 효과적으로 지원할수 있게 만들 것입니다."
+ erwache.2.a:0 "라이히스베르케 헤르만 괴링"
+ erwache.2.b:0 "페라이닉테 슈탈베르케 AG"
+ erwache.4.t:0 "나치즘의 종말"
+ erwache.4.d:0 "군주제 지지자들과 친 카이저 정당들의 급속한 부상 이후, NSDAP는 독일 정부에 대한 지배권을 포기해야만 했습니다. 이 역사적 결정은 독일 의회에서 공식적으로 선언되었고, 새로운 제4제국의 지배자로 누가 군림할지는 아직 알려지지 않았습니다. 우리는 제2제국의 통치자였던 빌헬름 2세를 불러올 수도 있고, 빌헬름 2세의 아들인 빌헬름 3세를 부를수 있습니다."
+ erwache.4.a:0 "빌헬름 2세가 우리를 이끌 것이다"
+ erwache.4.b:0 "왕자 빌헬름 3세가 우리를 이끌 것이다"
+ erwache.5.t:0 "독일 내전"
+ erwache.5.d:0 "군주제 지지자들은 NSDAP에 대항하여 성공적인 쿠데타를 이뤄내고 독일 의회를 습격해 정부를 장악했습니다. 불타버린 독일 의회의 잿더미 속에서 전 수상인 아돌프 히틀러는 사망하였고 하인리히 히믈러는 뮌헨에 주둔하는 새 정부의 수장으로 남게 되었습니다. 히믈러와 나치 충성파들은 새로운 제국 정부에 대항하여 내전을 일으켰고, 우리는 독일의 통일을 위해 싸워야 합니다. 누가 우리를 통일된 4제국으로 인도할 것인가요? 과거 카이저였던 빌헬름 2세? 아니면 그의 아들 빌헬름 3세?"
+ erwache.5.a:0 "빌헬름 2세가 우리를 이끌 것이다"
+ erwache.5.b:0 "왕자 빌헬름 3세가 우리를 이끌 것이다"
+ erwache.6.t:0 "독일의 방어적 주둔 요구"
+ erwache.6.d:0 "독일은 오랫동안 우리나라에 관심을 가져왔지만, 이것은 놀라운 사건입니다. 독일은 우리를 꼭두각시로 만들어 우리나라에 독일 군대가 주둔할수 있도록 허가를 요청하고 있습니다."
+ erwache.6.a:0 "우리는 적들로부터의 방어가 필요하다"
+ erwache.6.b:0 "우리는 우리의 자유를 포기하지 않을 것이다!"
+ erwache.7.t:0 "독일의 평화 제안!"
+ erwache.7.d:0 "독일-소련간의 전쟁을 종식시키기 위해 평화가 제안되었습니다. 이 조약에는 평화를 조건으로 소련이 점령한 여러 영토를 독일에게 양도하는 내용이 포함되어 있었습니다. 이것은 마치 제 1차 세계대전 당시 독일-소비에트 전쟁을 종식시킨 브레스트-리토프스크 조약과 매우 유사한 것으로 보입니다."
+ erwache.7.a:0 "제안을 거절해라!"
+ erwache.7.b:0 "제안을 받아들여라."
  
- germany.1002.t:0 "First Vienna Award"
- germany.1002.d:0 "The Hungarians were one of the people that suffered worst after the Great War. In the slaughter of the Austro-Hungarian Empire, many Hungarians were stranded on foreign soil though their ancestors had lived there for ages. We could greatly improve our relations with Hungary by awarding them some territories from Czechoslovakia."
- germany.1002.a:0 "Give them Southern Slovakia!"
- germany.1002.b:0 "The territory is ours!"
- germany.1002.c:0 "Slovakia deserves to keep it."
- r56_GER_first_vienna_award_tt:0 "§RDepending on your choice, the First Vienna Award will trigger if Hungary doesn't own Southern Slovakia.§!"
- r56_GER_first_vienna_award_II_tt:0 "§RThis choice will trigger the First Vienna Award right after if Hungary doesn't own Southern Slovakia.§!"
+ germany.1002.t:0 "제1차 빈 중재"
+ germany.1002.d:0 "헝가리인들은 대전 후 최악의 고통을 받은 사람들 중 하나였습니다. 오스트리아-헝가리 제국의 해체에서 많은 헝가리인들은 조상들이 거주했음에도 불구하고 외국의 영토에 고립되었습니다. 우리는 헝가리에게 체코슬로바키아의 일부 영토를 제공하여 헝가리와의 관계를 진전시킬수 있을 것입니다."
+ germany.1002.a:0 "남 슬로바키아를 제공해라!"
+ germany.1002.b:0 "영토는 우리의 것이다!"
+ germany.1002.c:0 "슬로바키아는 유지되어야 한다"
+ r56_GER_first_vienna_award_tt:0 "§R당신의 선택에 따라 헝가리가 남부 슬로바키아를 소유하지 않을 경우 제1차 빈 중재가 진행될 것입니다.§!"
+ r56_GER_first_vienna_award_II_tt:0 "§R이 선택은 헝가리가 남부 슬로바키아를 소유하지 않을 경우 바로 제1차 빈 중재가 진행될 것입니다.§!"
  
- erwache_news.1.t:0 "Spain Refuses German Demands!"
- erwache_news.1.d:0 "Spain has officially refused the German demand for a 'defensive occupation' of the country. Spain has now entered a state of war against Germany, rallying its military forces towards the border."
- erwache_news.1.a:0 "We will fight!"
- erwache_news.1.b:0 "So be it."
- erwache_news.1.c:0 "Another victim of Germany's expansion."
- erwache_news.2.t:0 "Soviet Union Refuses Peace With Germans!"
- erwache_news.2.d:0 "The Soviet Union has rejected a proposed treaty to end the German-Soviet war in the East. The treaty included terms to cede several western Soviet-occupied territories to the Germans in exchange for peace. These terms are similar to the treaty of Brest-Litovsk, which ended the German-Soviet conflict during the First World War."
- erwache_news.2.a:0 "Then we'll have to annex the Russian lands by force."
- erwache_news.2.b:0 "We will fight for every inch!"
- erwache_news.2.c:0 "Interesting."
- stubborn:0 "Stubborn"
- restoring_monarchist:0 "The Old Kaiser"
- new_monarchist:0 "A New Kaiser"
+ erwache_news.1.t:0 "스페인이 독일의 요구를 거부하다!"
+ erwache_news.1.d:0 "스페인은 독일의 '방어적 점령'요구를 공식적으로 거부했습니다. 스페인은 이제 독일과 전쟁상태로 돌입하여 국경에 군사력을 집결시켰습니다."
+ erwache_news.1.a:0 "우리는 싸울 것이다!"
+ erwache_news.1.b:0 "그렇다면 좋다."
+ erwache_news.1.c:0 "독일 확장의 또 다른 피해자"
+ erwache_news.2.t:0 "소비에트 연방이 독일의 제안을 거부하다!"
+ erwache_news.2.d:0 "소비에트 연방은 독일-소비에트 전쟁을 종식시키기 위해 제안된 조약을 거부했습니다. 이 조약에는 과거 소련이 점령한 여러 영토를 독일에 양도하기로 하는 조건이 포함되어 있었습니다. 이 조약은 1차대전 당시 독일-소비에트간의 전쟁을 종식시킨 브레스트-리토프스크 조약과 유사해 보입니다."
+ erwache_news.2.a:0 "그럼 답은 하나 뿐이군."
+ erwache_news.2.b:0 "우리는 일사불란하게 싸울 것이다!"
+ erwache_news.2.c:0 "흥미롭군."
+ stubborn:0 "완강하게"
+ restoring_monarchist:0 "전 카이저"
+ new_monarchist:0 "새로운 카이저"
  
- GER_blohm_und_voss_aviation:0 "Blohm & Voss"
- GER_deschimag:0 "Deschimag"
+ GER_blohm_und_voss_aviation:0 "블롬 & 포스"
+ GER_deschimag:0 "데시마크"
  
  #spicyedits
 
  #reinhard_heydrich:0 "Reinhard Heydrich"
  #reinhard_heydrich_desc:0 "Hangman also die"
 
- wilhelm_frick:0 "Wilhelm Frick"
- wilhelm_frick_desc:0 "Doesn't play nice with Himmler."
- baldur_von_schirach:0 "Baluder Von Schirach"
+ wilhelm_frick:0 "빌헬름 프리크"
+ wilhelm_frick_desc:0 "히믈러와는 사이가 좋지 않습니다."
+ baldur_von_schirach:0 "발두어 폰 시라흐"
  
  #operation_anthropoid:0 " Operation Anthropoid"
  #germany.1001:0 "Heydrich assassinated"
